# wagon-challenge

./: First.hs  README.md  wagon.cabal
profiling/: first.prof
profiling/1000000/: first.hp  first.prof
sources/Wagon/: First.hs
