name: wagon
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: samboosalis@gmail.com
homepage: https://github.com/sboosali/wagon
category: wagon 
author: Spiros Boosalis
extra-source-files:
    README.md
synopsis: TODO 
description:
 TODO 
 . 


library
 hs-source-dirs: sources
 default-language: Haskell2010
 ghc-options:
    -O2
    -threaded
    -fprof-auto

 exposed-modules:
  Wagon.First 
  Wagon.Second 

 build-depends:
    foldl ==1.1.2, 
    lens ==4.13, 
    parsec ==3.1.9,
    pipes ==4.1.7,
    base ==4.8.* 


executable first 
 hs-source-dirs: .
 default-language: Haskell2010
 main-is: First.hs
 build-depends:
    base ==4.8.* 
  , wagon ==0.0.0
 ghc-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"

